@@ -1,3 +1,10 @@
+2007-06-17	Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/dvbcutbase.ui: add accelerators for st(A)rt, e(N)d,
+	  (C)hapter and (B)ookmark.
+
+	* src/defines.h: include *.vdr and *.tts in DEFAULT_LOADFILTER.
+
 2007-06-12	Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* Windows build script & README update by Ralph Glasstetter.
